<resources>
    <string name="app_name">Hockey App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (leave blank for registration)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="chk_remember_me">Remember my credentials</string>

    <!--Strings related to User registration-->
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_password_reg">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>


    <string name="action_add_team">Add Team / Opponent</string>
    <string name="action_move_players">Move Players</string>
    <string name="action_set_roles">Set Roles</string>
    <string name="action_coach_menu">Coach Menu</string>
    <string name="action_add_players">Add Players</string>
    <string name="action_my_players">My Players</string>
    <string name="action_matches">Matches</string>
    <string name="tv_choose_user">Choose User</string>
    <string name="tv_change_role">Change the user\'s role</string>
    <string name="rad_None">None (No access to App)</string>
    <string name="rad_coach">Coach (Basic access to app)</string>
    <string name="rad_admin">Admin (Full access)</string>
    <string name="tv_team_or_opponent">Team or Opponent</string>
    <string name="tv_age_group">Choose Age Group</string>
    <string name="tv_coach_for_team">Choose Coach for Team</string>
    <string name="prompt_team_name">Team Name</string>
    <string name="prompt_opponent_name">Opponent Name</string>
    <string name="prompt_aid_name">Medical Aid Name</string>
    <string name="prompt_aid_plan">Medical Aid Plan</string>
    <string name="prompt_aid_number">Medical Aid Number</string>
    <string name="prompt_allergies">Allergies</string>
    <string name="prompt_phone1">1st Parent Cell No:</string>
    <string name="prompt_phone2">2nd Parent Cell No:</string>
    <string name="btn_submit_team">Submit Team</string>
    <string name="btn_submit_opponent">Submit Opponent</string>
    <string name="tv_teams">Teams</string>
    <string name="tv_opponents">Opponents</string>
    <string name="title_activity_match_stats">Match Stats</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_logo_description">App Logo</string>
    <string name="action_register_user">Register User</string>
    <string name="action_register_player">Save Player >></string>
    <string name="title_activity_register_player">Register New Player</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tv_reset_password">Please enter email which you want to recover password for:</string>
    <string name="title_activity_add_player">Add New Player</string>
    <string name="tv_add_player">Add Player to your Team</string>
    <string name="action_save_medical_info">Save Medical Info</string>
    <string name="log_out">Log Out</string>
    <string name="move_player">Move Player</string>
    <string name="error_password_mismatch">Passwords must match!</string>
    <string name="player_details">Player Details</string>
    <string name="medical_details">Medical Details</string>
    <string name="action_admin_menu">Admin Menu</string>
    <string name="choose_player_you_want_to_move">Choose Player you want to move</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="turn_overs_goals">Turn Overs/Goals</string>
    <string name="circle_presentations">Circle Penetrations</string>
    <string name="penalty_corners">Penalty Corners</string>
    <string name="goal_shots">Goal Shots</string>
    <string name="action_save_role">Save Role</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_view_teams">View Teams</string>
    <string name="title_activity_teams">TeamsActivity</string>
    <string name="no_player_selected">-- no player selected --</string>
    <string name="player_current_team">%s %s currently playing for %s</string>
    <string name="hint_search_player">Search for player</string>
    <string name="make_call">Call Parent</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="alert_delete_title">Delete Player</string>
    <string name="alert_delete_message">Are you sure you want to delete %s? This cannot be undone!</string>
    <string name="alert_positive">Yes</string>
    <string name="alert_negative">No</string>

    <string name="_2nd_half">2nd Half</string>
    <string name="_1st_half">1st Half</string>
    <string name="action_match_lineup">Match Line-Up</string>
    <string name="action_match_stats">Enter Match Stats</string>
    <string name="select_match">Select Match:</string>
    <string name="vs">VS</string>
    <string name="prompt_goals">Goals:</string>
    <string name="Add">+</string>
    <string name="Subtract">-</string>
    <string name="_1_left_forward">1. Left Forward:</string>
    <string name="_2_right_forward">2. Right Forward:</string>
    <string name="_3_center_forward">3. Center Forward:</string>
    <string name="_4_left_link">4. Left Link:</string>
    <string name="_5_right_link">5. Right Link:</string>
    <string name="_6_center_link">6. Center Link:</string>
    <string name="_7_left_back">7. Left Back:</string>
    <string name="_8_right_back">8. Right Back:</string>
    <string name="_9_left_forward">9. Left Forward:</string>
    <string name="_10_center_link">10. Center Link:</string>
    <string name="_11_goalie">11. Goalie:</string>
    <string name="_0">0</string>
    <string name="_12_bench">12. Bench</string>
    <string name="_13_bench">13. Bench</string>
    <string name="_14_bench">14. Bench</string>
    <string name="list_of_matches">List of Matches</string>
    <string name="tv_hint_match">If a match is not listed here, create one in the match line-up section by choosing the opponent and team from the combo boxes</string>
    <string name="turn_overs">Turn Overs:</string>
    <string name="_1st">1st</string>
    <string name="_2nd">2nd</string>
    <string name="our_team">Our Team</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>