<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SetRolesActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_choose_user"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linChooseUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.371">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/button"
            android:contentDescription="@string/prompt_name"
            android:src="@drawable/ic_person" />

        <Spinner
            android:id="@+id/spnUsers"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_spinner_height"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!--<android.support.v7.widget.AppCompatSpinner-->
        <!--android:id="@+id/spnUsers"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/dimen_spinner_height"-->
        <!--android:layout_gravity="center"-->
        <!--android:gravity="center"-->
        <!--android:textAlignment="center"-->
        <!--android:textSize="30sp"-->
        <!--android:textStyle="bold" />-->

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/tv_change_role"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linChooseUser"
        tools:layout_editor_absoluteY="123dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/rdNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/rad_None" />

        <RadioButton
            android:id="@+id/rdCoach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/rad_coach" />

        <RadioButton
            android:id="@+id/rdAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/rad_admin" />

    </RadioGroup>

    <Button
        android:id="@+id/btnSaveRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="onClickSaveRole"
        android:text="@string/action_save_role"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</android.support.constraint.ConstraintLayout>