<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_175dp"
                android:layout_height="@dimen/dimen_175dp"
                android:layout_gravity="center"
                android:background="@drawable/button"
                android:src="@mipmap/ic_launcher_foreground"
                android:contentDescription="@string/app_logo_description" />

            <TextView
                android:id="@+id/tvSessionUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                tools:text="administrator@hockeyapp.com \n(Admin)" />

            <LinearLayout
                android:id="@+id/frmAdminMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnAddTeamOpponent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:onClick="onClickActionButton"
                    android:text="@string/action_add_team"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnMovePlayers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:onClick="onClickActionButton"
                    android:text="@string/action_move_players"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnSetRoles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:onClick="onClickActionButton"
                    android:text="@string/action_set_roles"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/frmCoachMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <Button
                    android:id="@+id/btnAddPlayers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:onClick="onClickActionButton"
                    android:text="@string/action_add_players"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnMyPlayers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:onClick="onClickActionButton"
                    android:text="@string/action_my_players"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnMatches"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:onClick="onClickActionButton"
                    android:text="@string/action_matches"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/btnCoachMenu"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="6dp"
                android:layout_marginStart="@dimen/dimen_spinner_height"
                android:layout_marginEnd="@dimen/dimen_spinner_height"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onClickActionButton"
                android:text="@string/action_coach_menu"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>