<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MatchesMenuActivity">
    <ImageView
        android:layout_width="@dimen/dimen_175dp"
        android:layout_height="@dimen/dimen_175dp"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:src="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/app_logo_description" />

    <TextView
        android:id="@+id/tvSessionUserStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        tools:text="administrator@hockeyapp.com \n(Admin)" />

    <Button
        android:id="@+id/btnMatchLineUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/button"
        android:onClick="onClickMatchButton"
        android:text="@string/action_match_lineup"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnMatchStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/button"
        android:onClick="onClickMatchButton"
        android:text="@string/action_match_stats"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />
</LinearLayout>