<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_toEndOf="@+id/imageView4"
        android:gravity="start|center_vertical"
        android:text="@string/tv_reset_password"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:contentDescription="@string/prompt_email"
            android:src="@drawable/ic_email" />

        <EditText
            android:id="@+id/etEmailReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="7"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linEmail"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancelReset"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/btn_cancel"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/action_reset_password"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/button"
        android:src="@mipmap/ic_launcher_foreground" />

</RelativeLayout>